[gd_scene load_steps=2 format=3 uid="uid://cmotlifesupport"]

[ext_resource type="Script" path="res://scripts/mars_odyssey_trek/life_support_selector.gd" id="1_lifesupport"]

[node name="LifeSupportSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lifesupport")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.06, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="MainLayout" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="VBoxContainer" parent="MarginContainer/MainLayout"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleHeader" type="Label" parent="MarginContainer/MainLayout/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "LIFE SUPPORT SYSTEM"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="MarginContainer/MainLayout/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "How much redundancy do you need?"
horizontal_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="MarginContainer/MainLayout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25
alignment = 1

[node name="DetailsPanel" type="PanelContainer" parent="MarginContainer/MainLayout"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 160)

[node name="DetailsContent" type="MarginContainer" parent="MarginContainer/MainLayout/DetailsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HBox" type="HBoxContainer" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="LeftColumn" type="VBoxContainer" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/HBox/LeftColumn"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Select a Tier"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/HBox/LeftColumn"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 13
text = "Life support keeps your crew alive during the journey."
autowrap_mode = 2

[node name="WarningLabel" type="Label" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/HBox/LeftColumn"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = ""
autowrap_mode = 2

[node name="RightColumn" type="VBoxContainer" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme_override_constants/separation = 5

[node name="StatsTitle" type="Label" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/HBox/RightColumn"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Statistics"

[node name="StatsLabel" type="Label" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/HBox/RightColumn"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "Cost: --
Recycling: --
Failure Risk: --
System Mass: --"
